--- a/src/VaccineCovidManagement.Web/Pages/VaccineTonKhos/EditModal.cshtml
+++ b/src/VaccineCovidManagement.Web/Pages/VaccineTonKhos/EditModal.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model VaccineCovidManagement.Web.Pages.VaccineTonKhos.CreateModalModel
+@model VaccineCovidManagement.Web.Pages.VaccineTonKhos.EditModalModel
 @using Microsoft.Extensions.Localization
 @using VaccineCovidManagement.Localization
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal
@@ -9,12 +9,13 @@
 }
 
 <abp-card>
-    <form method="post" asp-page="/VaccineTonKhos/CreateModal">
+    <form method="post" asp-page="/VaccineTonKhos/EditModal">
         <abp-modal>
             <abp-modal-header></abp-modal-header>
             <abp-modal-body>
-                <abp-input asp-for="CreateVaccineTonKhos.TenVaccineTonKho"></abp-input>
-                <abp-input asp-for="CreateVaccineTonKhos.SoLuongTonKho" disable ></abp-input>
+                <abp-input asp-for="EditVaccineTonKhos.Id"></abp-input>
+                <abp-input asp-for="EditVaccineTonKhos.TenVaccineTonKho"></abp-input>
+                <abp-input asp-for="EditVaccineTonKhos.SoLuongTonKho" disable ></abp-input>
             </abp-modal-body>
             <abp-modal-footer buttons="@(AbpModalButtons.Cancel| AbpModalButtons.Save)"></abp-modal-footer>
         </abp-modal>
