update hệ thống

--- a/src/VaccineCovidManagement.Web/Pages/VaccineTonKhos/EditModal.cshtml
+++ b/src/VaccineCovidManagement.Web/Pages/VaccineTonKhos/EditModal.cshtml
@@ -15,7 +15,7 @@
             <abp-modal-body>
                 <abp-input asp-for="EditVaccineTonKhos.Id"></abp-input>
                 <abp-input asp-for="EditVaccineTonKhos.TenVaccineTonKho"></abp-input>
-                <abp-input asp-for="EditVaccineTonKhos.SoLuongTonKho" disable ></abp-input>
+                <abp-input asp-for="EditVaccineTonKhos.SoLuongTonKho"></abp-input>
             </abp-modal-body>
             <abp-modal-footer buttons="@(AbpModalButtons.Cancel| AbpModalButtons.Save)"></abp-modal-footer>
         </abp-modal>
