--- a/src/VaccineCovidManagement.Web/Pages/ChiTietNhaps/EditModal.cshtml
+++ b/src/VaccineCovidManagement.Web/Pages/ChiTietNhaps/EditModal.cshtml
@@ -19,6 +19,8 @@
                 <abp-input asp-for="EditChiTietNhaps.NgaySx"></abp-input>
                 <abp-input asp-for="EditChiTietNhaps.HanSuDung"></abp-input>
                 <abp-input asp-for="EditChiTietNhaps.SoLuongNhap"></abp-input>
+                <abp-input asp-for="valueOld.VaccineIDOld"></abp-input>
+                <abp-input asp-for="valueOld.SoLuongTonKhoOld"></abp-input>
             </abp-modal-body>
             <abp-modal-footer buttons="@(AbpModalButtons.Cancel| AbpModalButtons.Save)"></abp-modal-footer>
         </abp-modal>
