update giao dien quan ly vaccine

--- a/src/VaccineCovidManagement.Web/Pages/VaccineTonKhos/CreateModal.cshtml
+++ b/src/VaccineCovidManagement.Web/Pages/VaccineTonKhos/CreateModal.cshtml
@@ -14,7 +14,7 @@
             <abp-modal-header></abp-modal-header>
             <abp-modal-body>
                 <abp-input asp-for="CreateVaccineTonKhos.TenVaccineTonKho"></abp-input>
-                <abp-input asp-for="CreateVaccineTonKhos.SoLuongTonKho" disable ></abp-input>
+                <abp-input asp-for="CreateVaccineTonKhos.SoLuongTonKho"></abp-input>
             </abp-modal-body>
             <abp-modal-footer buttons="@(AbpModalButtons.Cancel| AbpModalButtons.Save)"></abp-modal-footer>
         </abp-modal>
